--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
     <PackageReference Include="Scrutor" Version="3.2.2" />
   </ItemGroup>
 
